--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,9 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
-    background-color: var(--gainsboro);
+    background-color: var(--main-color);
 }
 
 /* === Utilidades/Variáveis === */
@@ -26,81 +26,47 @@ body {
     }
 }
 
-
-
 :root {
-    --gainsboro: #DCDCDC; 
-    --darkgray: #1D1D1F;
-    --slategray: #708090;
+    --main-color: #121111; 
+    --secondary-color: #fafafa;
+    --tertiary-color: #b8b8b8;
 }
 
+.mt20 {
+    margin-top: 20px;
+}
 
 /* === Navbar === */
 .nav {
     position: fixed;
-    padding: 40px 0 0 0;
+    padding: 50px 0 0 0;
     width: 100%;
 }
 
 .nav__container {
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-}
-
-.nav__logo {
-    color: var(--darkgray);
-    font-size: 28px;
-}
-
-.nav__list {
-    display: flex;
-}
-
-.nav__item {
-    margin: 0 30px 0 0;
-}
-
-.nav__link {
-    color: var(--slategray);
-}
-
-.nav__link::after {
-    content: '';
-    display: block;
-    margin: 0 auto;
-    width: 0;
-    height: 2px;
-    transition: width .4s;
-    background-color: var(--darkgray);
-}
-
-.nav__link:hover::after {
-    width: 100%;
-}
-
-.nav__link:hover {
-    color: var(--darkgray);
-    transition: ease 0.2s;
+    justify-content: flex-end;
 }
 
 .bars {
     height: 35px;
     cursor: pointer;
     transition: all .3s ease-in-out;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    justify-content: flex-end;
+    align-items: flex;
+    position: fixed;
     border-radius: 20px;
-    display: none;
+    display: flex;
     z-index: 2;
+    right: 60px;
+    top: 40px;
 }
 
 .bars__burger {
     width: 30px;
     height: 2px;
-    background:  #332e2e;
+    background:  white;
     border-radius: 20px;
 }
 
@@ -110,7 +76,7 @@ body {
     position: absolute;
     width: 30px;
     height: 2px;
-    background:  #332e2e;
+    background:  white;
     border-radius: 20px;
     transition: all .3s ease-in-out;
 }
@@ -137,14 +103,76 @@ body {
     transform: rotate(-45deg) translate(35px, 35px);
 } 
 
-.sticky {
-    background-color: white;
-    padding: 1.25em 3.125em;
-    color: black;
-    transition: ease 0.2s;
-}
 
-#teste {
+/* === Home === */
+.home__container {
     width: 100%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url(/assets/images/background.gif);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.home__title {
+    color: var(--secondary-color);
+    font-size: 32px;
+}
+
+.home__description {
+    color: var(--tertiary-color);
+    text-align: center;
+    max-width: 80ch;
+}
+
+.home__icon {
+    font-size: 32px;
+    color: var(--secondary-color);
+    cursor: pointer;
+    margin: 60px 20px 0 0;
+    transition: ease 0.3s;
+}
+
+.home__icon:hover {
+    transform: translate(0, -8px);
+}
+
+/* === Sec-2 === */
+#sec-2 {
+    width: 100%;
+    height: 100vh;
+    background-color: #bababa;    
+}
+
+
+/* === Animação === */
+[data-anime] {
+    opacity: 0;    
+    transition: ease .8s;
+}
+
+[data-anime="left"] {
+    transform: translate3d(-50px, 0, 0);
+}
+
+[data-anime="right"] {
+    transform: translate3d(50px, 0, 0);
+}
+
+[data-anime="top"] {
+    transform: translate3d(0, -50px, 0);
+}
+
+[data-anime="bottom"] {
+    transform: translate3d(0, 50px, 0);
+}
+
+
+[data-anime].animate {
+    opacity: 1;
+    transform: translate3d(0px, 0px, 0px);
 }
