--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.6;
     background-color: #000002;
     background-image: url(/assets/images/space.png);
@@ -16,7 +16,7 @@ body {
 
 /* === Utilidades/Variáveis === */
 .spacing-wrapper {
-    width: 85%;
+    width: 70%;
     max-width: 85em;
     margin: 0 auto;
 }
@@ -138,6 +138,7 @@ body {
 .home__title {
     color: var(--secondary-color);
     font-size: 32px;
+    text-align: center;
 }
 
 .home__description {
@@ -151,7 +152,7 @@ body {
 }
 
 .home__icon {
-    font-size: 32px;
+    font-size: 38px;
     color: var(--secondary-color);
     cursor: pointer;
     margin: 60px 20px 0 0;
@@ -191,6 +192,40 @@ body {
     margin-top: 80px;
 }
 
+.about__img {
+    border-radius: 100px;
+    border: 2px solid #070724;
+    width: 150px;
+    height: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+
+.about__title {
+    text-align: center;
+    color: var(--secondary-color);
+    margin: 20px 0 40px 0;
+    font-weight: 800;   
+    font-size: 28px; 
+}
+
+.about__paragraph {
+    color: var(--secondary-color);    
+    font-size: 20px;
+    text-align: center;
+    margin: 0 0 30px 0;
+}
+
+.about__hr {
+    margin: 2% auto;
+    width: 60%;
+    color: var(--secondary-color);
+    height: 1px;
+    background-color: var(--secondary-color);
+}
+
 /* === Portfolio === */
 #portfolio {
     margin-top: 80px;
@@ -201,19 +236,14 @@ body {
 .portfolio__title {
     text-align: center;
     color: var(--secondary-color);
-    margin: 0 0 20px 0;
+    margin: 20px 0 40px 0;
     font-weight: 800;
-    font-style: italic;
 }
-
-
 
 .portfolio__images {
     display: grid;
     grid-template-columns: repeat(2, 500px);
-    place-items: center;
-    justify-content: center;
-    align-items: center;
+    
 }
 
 .portfolio__img {
