--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,7 @@ body {
     color: var(--tertiary-color);
     text-align: center;
     max-width: 80ch;
+    font-size: 18px;
 }
 
 .home__description--2 {
@@ -157,6 +158,7 @@ body {
     cursor: pointer;
     margin: 60px 20px 0 0;
     transition: ease 0.3s;
+    text-align: center;
 }
 
 .home__icon:hover {
@@ -194,7 +196,7 @@ body {
 
 .about__img {
     border-radius: 100px;
-    border: 2px solid rgba(27, 26, 24.3);;
+    border: 2px solid rgba(27, 26, 24.3);
     width: 150px;
     height: 150px;
     display: block;
@@ -226,6 +228,14 @@ body {
     background-color: var(--secondary-color);
 }
 
+/* === Services === */
+.services__title {
+    text-align: center;
+    color: var(--secondary-color);
+    margin: 20px 0 40px 0;
+    font-weight: 800;    
+}
+
 /* === Portfolio === */
 #portfolio {
     margin: auto;
@@ -241,48 +251,70 @@ body {
 .portfolio__subtitle {
     text-align: center;
     color: var(--secondary-color);    
-    margin: 0 0 40px 0;
+    margin: 0 0 60px 0;
+    font-size: 20px;
 }
 
 .portfolio__images {
     display: grid;
+    grid-gap: 2vw;
     grid-template-columns: repeat(2, 1fr);
 }
 
-.portfolio__column {
-    display: flex;
-    flex-direction: column;
+.site__img {
+    object-fit: cover;
+    width: 420px;
+    max-width: 100%;
+    max-height: 100%;
+    margin-bottom: 2%;
 }
 
-.portfolio__img {
-    object-fit: cover;
-    box-shadow: 5px 5px 5px 0px rgba(46, 46, 46.1);
-    width: 420px;
-    max-height: 100%;
-    margin-bottom: 6%;
+.site__description {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;  
+}
+
+.site__tags {
+    display: flex;
+}
+
+.site__tag {
+    color: var(--secondary-color);
+    padding: 3px 15px;
+    background-color: #ff2638;
+    margin: 0 5px 10px 0;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+.site__title {
+    font-size: 24px;
+    color: var(--secondary-color);
 }
 
 /* === Animação === */
 [data-anime] {
     opacity: 0;    
     transition: ease .6s;
-    transition-delay: 0.2s;
+    transition-delay: 0.3s;
 }
 
 [data-anime="left"] {
-    transform: translate3d(-50px, 0, 0);
+    transform: translate3d(-60px, 0, 0);
 }
 
 [data-anime="right"] {
-    transform: translate3d(50px, 0, 0);
+    transform: translate3d(60px, 0, 0);
 }
 
 [data-anime="top"] {
-    transform: translate3d(0, -50px, 0);
+    transform: translate3d(0, -60px, 0);
 }
 
 [data-anime="bottom"] {
-    transform: translate3d(0, 50px, 0);
+    transform: translate3d(0, 60px, 0);
 }
 
 
