--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rubik', sans-serif;
     line-height: 1.6;
     background-color: #000002;
     background-image: url(/assets/images/space.png);
@@ -55,6 +55,7 @@ body {
     line-height: 7ch;
     text-transform: uppercase;
     font-size: 1.125rem;
+    font-weight: 600;
     color: var(--secondary-color);
     display: block;
 }
@@ -196,7 +197,7 @@ body {
 
 .about__img {
     border-radius: 100px;
-    border: 2px solid rgba(27, 26, 24.3);
+    border: 4px solid rgba(5, 5, 5.3);
     width: 150px;
     height: 150px;
     display: block;
@@ -214,14 +215,14 @@ body {
 }
 
 .about__paragraph {
-    color: var(--secondary-color);    
+    color: #fae3e1;    
     font-size: 20px;
     text-align: center;
     margin: 0 0 30px 0;
 }
 
 .about__hr {
-    margin: 2% auto 80px auto;
+    margin: 2% auto 120px auto;
     width: 60%;
     color: var(--secondary-color);
     height: 1px;
@@ -233,9 +234,24 @@ body {
     text-align: center;
     color: var(--secondary-color);
     margin: 20px 0 40px 0;
-    font-weight: 800;    
+    font-weight: 800; 
+    font-size: 28px;    
 }
 
+.card__container {
+    display: grid;
+    place-items: center; 
+    grid-template-columns: repeat(3, 1fr);
+    margin: 0 0 120px;
+}
+
+.card {
+    background-color: #0D0E0F;
+    border-radius: 6px;
+    width: 300px;
+    height: 400px;
+    display: flex;
+}
 /* === Portfolio === */
 #portfolio {
     margin: auto;
@@ -246,6 +262,7 @@ body {
     color: var(--secondary-color);
     margin: 20px 0 40px 0;
     font-weight: 800;
+    font-size: 28px; 
 }
 
 .portfolio__subtitle {
@@ -267,6 +284,7 @@ body {
     max-width: 100%;
     max-height: 100%;
     margin-bottom: 2%;
+    border-radius: 4px;
 }
 
 .site__description {
@@ -282,7 +300,7 @@ body {
 .site__tag {
     color: var(--secondary-color);
     padding: 3px 15px;
-    background-color: #ff2638;
+    background-color: #0D0E0F;
     margin: 0 5px 10px 0;
     border-radius: 5px;
     text-transform: uppercase;
