--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -7,7 +7,7 @@
 }
 
 /* === Home === */
-@media(max-width: 1100px) {
+@media(max-width: 800px) {
     .home__title {
         font-size: 28px;
         max-width: 40ch;
@@ -20,20 +20,29 @@
 }
 
 
-@media(max-width: 600px) {
+@media(max-width: 520px) {
+    .home__container {
+        padding: 120px 0;
+        
+    }
+
     .home__title {
         font-size: 26px;
-        max-width: 20ch;
     }
     
-    .home__description {
+    .home__description--2 {
         font-size: 14px;
+        text-align: center;
+        letter-spacing: -.01rem;
+        max-width: 19.375rem;
+        white-space: pre-line;
+        line-height: 1.7;
     }
 
     .home__icon {
         font-size: 28px;
-        margin: 20px 0 0 10px;
-        text-align: center;
+        margin: 30px 0 0 10px;
+        
     }
 }
 
@@ -44,7 +53,8 @@
     }
 
     .about__paragraph {
-        font-size: 18px;
+        font-size: 16px;
+        letter-spacing: -.01rem;
     }
 }
 
