--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -29,9 +29,13 @@
     .home__title {
         font-size: 26px;
     }
+
+    .home__description {
+        font-size: 14px;   
+    }
     
     .home__description--2 {
-        font-size: 14px;
+        font-size: 16px;
         text-align: center;
         letter-spacing: -.01rem;
         max-width: 19.375rem;
