--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,7 @@
 
 body {
     font-family: 'Rubik', sans-serif;
-    line-height: 1.6;
-    background-color: #1B1D20;
-    
+    line-height: 1.6;    
 }
 
 /* === Utilidades/Variáveis === */
@@ -126,8 +124,7 @@ body {
 /* === Home === */
 .home__container {
     width: 100%;
-    height: auto;
-    padding: 160px 0;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -175,7 +172,7 @@ body {
 
 .about__img {
     border-radius: 100px;
-    border: 4px solid #916AEF;
+    border: 4px solid rgb(27, 29, 32);
     width: 150px;
     height: 150px;
     display: block;
@@ -208,6 +205,10 @@ body {
 }
 
 /* === Services === */
+#services {
+    background-color: #1B1D20;
+}
+
 .services__container {
     padding: 80px 0;
 }
