--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,11 +39,11 @@ body {
 .menu__mobile {
     width: 100%;
     height: 100vh;
-    background-color: white#16171a;
+    background-color: #16171a;
     position: fixed;
     z-index: 1;
     transition: all linear 0.3s;
-    top: -100%;
+    top: -150%;
     display: flex;
     align-items: center;
     justify-content: center;
