--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -36,11 +36,11 @@
     
     .home__description--2 {
         font-size: 16px;
-        text-align: center;
         letter-spacing: -.01rem;
         max-width: 19.375rem;
-        white-space: pre-line;
-        margin: 0 0 40px 0;
+        white-space: pre-line;                
+        margin: 40px 0 40px 0;
+        font-weight: 300;
     }
 
     .home__icon {
