--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 
 /* === Utilidades/Variáveis === */
 .spacing-wrapper {
-    width: 70%;
+    width: 75%;
     max-width: 85em;
     margin: 0 auto;
 }
@@ -149,11 +149,14 @@ body {
 
 .home__description--2 {
     color: var(--secondary-color);
+    margin: 40px 0 0 0;
+    white-space: pre-line; 
+    font-style: normal;
 }
 
 .home__icon {
     font-size: 38px;
-    color: #916AEF;
+    color: var(--secondary-color);
     cursor: pointer;
     margin: 60px 20px 0 0;
     transition: ease 0.3s;
@@ -172,7 +175,6 @@ body {
 
 .about__img {
     border-radius: 100px;
-    border: 4px solid rgb(27, 29, 32);
     width: 150px;
     height: 150px;
     display: block;
@@ -185,13 +187,13 @@ body {
     text-align: center;
     color: var(--secondary-color);
     margin: 20px 0 40px 0;
-    font-weight: 300;   
-    font-size: 28px; 
+    font-weight: normal; 
+    font-size: 32px;   
 }
 
 .about__paragraph {
     color: #fae3e1;    
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
     margin: 0 0 30px 0;
 }
@@ -216,26 +218,27 @@ body {
 .services__title {
     text-align: center;
     color: var(--secondary-color);
-    margin: 20px 0 40px 0;
-    font-weight: 300; 
-    font-size: 28px;    
+    margin: 20px 0 60px 0;
+    font-weight: normal; 
+    font-size: 32px;    
 }
 
 .card__container {
     display: grid;
-    place-items: center; 
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: auto auto auto;
+    grid-gap: 1vw;
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
     background-color: #282A2D;
     border-radius: 6px;
-    width: 300px;
-    height: 400px;
+    width: 350px;
+    height: 450px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 40px 0;
+    padding: 40px 20px;
     box-shadow: 0 4px 4px 0 rgba(0,0,0,0.5);   
 }
 
@@ -244,8 +247,8 @@ body {
 }
 
 .card__icon {
-    color: #916AEF;
-    font-size: 38px;    
+    color: var(--secondary-color);
+    font-size: 42px;    
     margin-bottom: 20px;
 }
 
@@ -254,9 +257,15 @@ body {
 }
 
 .card__title {
+    font-weight: normal;
+    font-size: 28px;
     color: var(--secondary-color);
-    font-weight: 500;
-    font-size: 24px;
+    margin: 0 0 20px 0;
+}
+
+.card__paragraph {
+    color: var(--secondary-color);
+    line-height: 2;
 }
 
 /* === Portfolio === */
@@ -273,8 +282,8 @@ body {
     text-align: center;
     color: var(--secondary-color);
     margin: 20px 0 40px 0;
-    font-weight: 400;
-    font-size: 28px; 
+    font-weight: normal; 
+    font-size: 32px;   
 }
 
 .portfolio__subtitle {
