--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,7 @@ body {
 .home__icon {
     font-size: 38px;
     color: var(--secondary-color);
+    text-shadow: 4px 8px rgba(40, 42, 45,.75);
     cursor: pointer;
     margin: 60px 20px 0 0;
     transition: ease 0.3s;
@@ -243,13 +244,14 @@ body {
 }
 
 .card--middle {
-    margin: 0 0 30px 0;
+    margin: 0 0 50px 0;
 }
 
 .card__icon {
     color: var(--secondary-color);
     font-size: 42px;    
     margin-bottom: 20px;
+    text-shadow: 3px 6px rgba(27, 29, 32,.75);
 }
 
 .card__icon--mobile {
@@ -281,7 +283,7 @@ body {
 .portfolio__title {
     text-align: center;
     color: var(--secondary-color);
-    margin: 20px 0 40px 0;
+    margin: 20px 0 60px 0;
     font-weight: normal; 
     font-size: 32px;   
 }
@@ -289,9 +291,9 @@ body {
 .portfolio__subtitle {
     text-align: center;
     color: var(--secondary-color);    
-    margin: 0 0 60px 0;
-    font-size: 20px;
-    font-weight: 400;
+    margin: 0 0 40px 0;
+    font-size: 24px;
+    font-weight: normal;
 }
 
 .portfolio__images {
