--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,10 @@ body {
 
 
 /* === Home === */
+#home {
+    background-color: #1B1D20;
+}
+
 .home__container {
     width: 100%;
     height: 100vh;
@@ -129,7 +133,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #1B1D20;
     background-size: cover;
     background-position: center;
 }
@@ -182,6 +185,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 40px;
+    object-fit: cover;
 }
 
 .about__title {
@@ -324,7 +328,7 @@ body {
 .site__tag {
     color: var(--secondary-color);
     padding: 3px 15px;
-    background-color: #916AEF;
+    background-color: #1B1D20;
     margin: 0 5px 10px 0;
     border-radius: 5px;
     text-transform: uppercase;
