--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 body {
     font-family: 'Rubik', sans-serif;
     line-height: 1.6;    
+    background-color: white;
 }
 
 /* === Utilidades/Variáveis === */
@@ -83,7 +84,7 @@ body {
 .bars__burger {
     width: 30px;
     height: 2px;
-    background:  white;
+    background:  #121212;
     border-radius: 20px;
 }
 
@@ -93,7 +94,7 @@ body {
     position: absolute;
     width: 30px;
     height: 2px;
-    background:  white;
+    background:  #121212;
     border-radius: 20px;
     transition: all .3s ease-in-out;
 }
@@ -123,12 +124,12 @@ body {
 
 /* === Home === */
 #home {
-    background-color: #1B1D20;
+    background-color: white;
 }
 
 .home__container {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -138,20 +139,20 @@ body {
 }
 
 .home__title {
-    color: var(--secondary-color);
+    color: #121212;
     font-size: 32px;
     text-align: center;
 }
 
 .home__description {
-    color: var(--tertiary-color);
+    color: #1c1c1c;
     text-align: center;
     max-width: 80ch;
     font-size: 18px;
 }
 
 .home__description--2 {
-    color: var(--secondary-color);
+    color: #1c1c1c;
     margin: 40px 0 0 0;
     white-space: pre-line; 
     font-style: normal;
@@ -159,8 +160,8 @@ body {
 
 .home__icon {
     font-size: 38px;
-    color: var(--secondary-color);
-    text-shadow: 4px 8px rgba(40, 42, 45,.75);
+    color: #4697e3;
+    
     cursor: pointer;
     margin: 60px 20px 0 0;
     transition: ease 0.3s;
@@ -173,12 +174,13 @@ body {
 
 /* === About === */
 #about {
-    padding: 60px 0;
-    background-color: #282A2D;
+    padding: 20px 0;
+    background-color: white;
 }
 
 .about__img {
     border-radius: 100px;
+    border: 4px solid #4697e3;
     width: 150px;
     height: 150px;
     display: block;
@@ -190,14 +192,14 @@ body {
 
 .about__title {
     text-align: center;
-    color: var(--secondary-color);
+    color: #1c1c1c;
     margin: 20px 0 40px 0;
     font-weight: normal; 
     font-size: 32px;   
 }
 
 .about__paragraph {
-    color: #fae3e1;    
+    color: #1c1c1c;  
     font-size: 18px;
     text-align: center;
     margin: 0 0 30px 0;
@@ -212,17 +214,13 @@ body {
 }
 
 /* === Services === */
-#services {
-    background-color: #1B1D20;
-}
-
 .services__container {
-    padding: 80px 0;
+    padding: 20px 0;
 }
 
 .services__title {
     text-align: center;
-    color: var(--secondary-color);
+    color: #121212;
     margin: 20px 0 60px 0;
     font-weight: normal; 
     font-size: 32px;    
@@ -237,7 +235,7 @@ body {
 }
 
 .card {
-    background-color: #282A2D;
+    background-color: #4697e3;
     border-radius: 6px;
     width: 350px;
     height: auto;
@@ -255,7 +253,6 @@ body {
     color: var(--secondary-color);
     font-size: 42px;    
     margin-bottom: 20px;
-    text-shadow: 3px 6px rgba(27, 29, 32,.75);
 }
 
 .card__icon--mobile {
@@ -277,16 +274,15 @@ body {
 /* === Portfolio === */
 #portfolio {
     margin: auto;
-    background-color: #282A2D;
 }
 
 .portfolio__container {
-    padding: 60px 0;    
+    padding: 20px 0;    
 }
 
 .portfolio__title {
     text-align: center;
-    color: var(--secondary-color);
+    color: #1c1c1c; 
     margin: 20px 0 60px 0;
     font-weight: normal; 
     font-size: 32px;   
@@ -294,7 +290,7 @@ body {
 
 .portfolio__subtitle {
     text-align: center;
-    color: var(--secondary-color);    
+    color: #1c1c1c; 
     margin: 0 0 40px 0;
     font-size: 24px;
     font-weight: normal;
