--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@
 body {
     font-family: 'Rubik', sans-serif;
     line-height: 1.6;    
-    background-color: white;
 }
 
 /* === Utilidades/Variáveis === */
@@ -84,7 +83,7 @@ body {
 .bars__burger {
     width: 30px;
     height: 2px;
-    background:  #121212;
+    background:  white;
     border-radius: 20px;
 }
 
@@ -94,7 +93,7 @@ body {
     position: absolute;
     width: 30px;
     height: 2px;
-    background:  #121212;
+    background:  white;
     border-radius: 20px;
     transition: all .3s ease-in-out;
 }
@@ -124,12 +123,12 @@ body {
 
 /* === Home === */
 #home {
-    background-color: white;
+    background-color: #1B1D20;
 }
 
 .home__container {
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -139,20 +138,20 @@ body {
 }
 
 .home__title {
-    color: #121212;
+    color: var(--secondary-color);
     font-size: 32px;
     text-align: center;
 }
 
 .home__description {
-    color: #1c1c1c;
+    color: var(--tertiary-color);
     text-align: center;
     max-width: 80ch;
     font-size: 18px;
 }
 
 .home__description--2 {
-    color: #1c1c1c;
+    color: var(--secondary-color);
     margin: 40px 0 0 0;
     white-space: pre-line; 
     font-style: normal;
@@ -160,8 +159,8 @@ body {
 
 .home__icon {
     font-size: 38px;
-    color: #4697e3;
-    
+    color: var(--secondary-color);
+    text-shadow: 4px 8px rgba(40, 42, 45,.75);
     cursor: pointer;
     margin: 60px 20px 0 0;
     transition: ease 0.3s;
@@ -174,13 +173,12 @@ body {
 
 /* === About === */
 #about {
-    padding: 20px 0;
-    background-color: white;
+    padding: 60px 0;
+    background-color: #282A2D;
 }
 
 .about__img {
     border-radius: 100px;
-    border: 4px solid #4697e3;
     width: 150px;
     height: 150px;
     display: block;
@@ -192,14 +190,14 @@ body {
 
 .about__title {
     text-align: center;
-    color: #1c1c1c;
+    color: var(--secondary-color);
     margin: 20px 0 40px 0;
     font-weight: normal; 
     font-size: 32px;   
 }
 
 .about__paragraph {
-    color: #1c1c1c;  
+    color: #fae3e1;    
     font-size: 18px;
     text-align: center;
     margin: 0 0 30px 0;
@@ -214,13 +212,17 @@ body {
 }
 
 /* === Services === */
+#services {
+    background-color: #1B1D20;
+}
+
 .services__container {
-    padding: 20px 0;
+    padding: 80px 0;
 }
 
 .services__title {
     text-align: center;
-    color: #121212;
+    color: var(--secondary-color);
     margin: 20px 0 60px 0;
     font-weight: normal; 
     font-size: 32px;    
@@ -235,7 +237,7 @@ body {
 }
 
 .card {
-    background-color: #4697e3;
+    background-color: #282A2D;
     border-radius: 6px;
     width: 350px;
     height: auto;
@@ -253,6 +255,7 @@ body {
     color: var(--secondary-color);
     font-size: 42px;    
     margin-bottom: 20px;
+    text-shadow: 3px 6px rgba(27, 29, 32,.75);
 }
 
 .card__icon--mobile {
@@ -274,15 +277,16 @@ body {
 /* === Portfolio === */
 #portfolio {
     margin: auto;
+    background-color: #282A2D;
 }
 
 .portfolio__container {
-    padding: 20px 0;    
+    padding: 60px 0;    
 }
 
 .portfolio__title {
     text-align: center;
-    color: #1c1c1c; 
+    color: var(--secondary-color);
     margin: 20px 0 60px 0;
     font-weight: normal; 
     font-size: 32px;   
@@ -290,7 +294,7 @@ body {
 
 .portfolio__subtitle {
     text-align: center;
-    color: #1c1c1c; 
+    color: var(--secondary-color);    
     margin: 0 0 40px 0;
     font-size: 24px;
     font-weight: normal;
