--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@
 
 body {
     font-family: 'Rubik', sans-serif;
-    line-height: 1.6;    
+    line-height: 1.6;   
+    background-color: var(--secondary-bckColor);
 }
 
 /* === Utilidades/Variáveis === */
@@ -142,7 +143,7 @@ body {
 
 .home__container {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
